--- a/index.html
+++ b/index.html
@@ -69,6 +69,16 @@
 
 
 <article property="mainEntity" typeof="Book">
+	<p class="date-read">May 2021</p>
+	<img property="image" src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1583066862l/52761909.jpg" alt=""/>
+	<h2><a href="https://www.goodreads.com/book/show/52761909-the-paris-library" property="name">The Paris Library</a></h2>
+	<p class="author">by <a property="author" href="https://www.goodreads.com/author/show/2920231.Janet_Skeslien_Charles">Janet Skeslien Charles</a></p>
+	<p class="description">
+		Based on the true World War II story of the heroic librarians at the American Library in Paris, this is an unforgettable story of romance, friendship, family, and the power of literature to bring us together.
+	</p>
+</article>
+
+<article property="mainEntity" typeof="Book">
 	<p class="date-read">April 2021</p>
 	<img property="image" src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1593013000l/53288434.jpg" alt=""/>
 	<h2><a href="https://www.goodreads.com/book/show/53288434-the-lost-apothecary" property="name">The Lost Apothecary</a></h2>
