Catch up and a few layout tweaks
Catch up on the past few months; Float book covers right, layer in a few queries to adjust layout on tablet/mobile; move CSS to its own separate file.

--- a/index.html
+++ b/index.html
@@ -26,37 +26,28 @@
 		<meta property="og:type" content="website" />
 		<meta property="fb:app_id" content="2304307769871761" />
 		<meta property="og:image" content="http://kayte.ca/belljarbookclub/bjbc-preview-image.png" />
-		<meta property="og:image:alt" content="Bell Jar Book Club, Halifax Nova Scotia"
+		<meta property="og:image:alt" content="Bell Jar Book Club, Halifax Nova Scotia" />
 		<link rel="icon" type="image/png" href="http://kayte.ca/belljarbookclub/bookicon.png">
 
 		<title>The Bell Jar Book Club, Halifax NS</title>
 
 		<link href="https://fonts.googleapis.com/css2?family=Bahiana&display=swap" rel="stylesheet">
-
-		<style>
-			body {text-align: center; font-family: 'Helvetica', sans-serif; color: #231F20; background: #171A21;}
-			h1 {font-family: 'Bahiana', cursive; font-size: 7em; margin: .15em 0; color: #171A21; line-height: 1em; text-align: center; color: #FF499E;}
-			h2 {line-height: 1.35em; margin-bottom: .25em;}
-			a {color: #000; border-bottom: 4px solid #76E5FC; text-decoration: none;}
-			a:hover {color: #231F20; border-bottom: none; background: #76E5FC;}
-			section {width: 90%; max-width: 800px; margin: 0 auto; text-align: left; line-height: 1.75em; color: #484349; padding: 1em; border-radius: 20px; background:#fff;}
-			article {margin-bottom: 2em; display: block; clear: both; min-height: 250px;}
-			article img {float: left; margin: 0 2em 1em 1em; max-width: 125px; border-radius: 5px;}
-			article .author {font-size: .8em; margin: 0;}
-			article .description {font-family: 'EB Garamond', Georgia, 'Times New Roman', Times, serif; font-size: 1.2em; margin-right: 1em;}
-			article .date-read {border-radius: 5px; font-weight: normal; background: #76E5FC; color: #392F5A; padding: 1em 1em .7em 1em; text-transform: uppercase;font-size: 1em; letter-spacing: 3px;}
-		</style>
+		<link href="bjbc.css" rel="stylesheet">
+>
 	</head>
 <body vocab="http://schema.org/" typeof="WebPage">
-<section>
 
-<h1>The Bell Jar Book Club</h1>
+<header>
+	<h1>The Bell Jar Book Club</h1>
+	<p>Established November 2018 in Halifax, Nova Scotia Canada</p>
+</header>
+
 
 
 <!-- ENTRY TEMPLATE
 
 <article property="mainEntity" typeof="Book">
-	<p class="date-read">MONTH 2021</p>
+	<p class="date-read">MONTH 2022</p>
 	<img property="image" src="" alt=""/>
 	<h2><a href="" property="name">NAME</a></h2>
 	<p class="author">by <a property="author" href="">AUTHOR</a></p>
@@ -67,6 +58,101 @@
 
 -->
 
+<section>
+<article property="mainEntity" typeof="Book">
+	<p class="date-read">October 2022</p>
+	<img property="image" src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1626185013l/55315487._SY475_.jpg" alt=""/>
+	<h2><a href="https://www.goodreads.com/book/show/55315487-the-plot" property="name">The Plot</a></h2>
+	<p class="author">by <a property="author" href="https://www.goodreads.com/author/show/72027.Jean_Hanff_Korelitz"> Jean Hanff Korelitz</a></p>
+	<p class="description">
+		Jacob Finch Bonner was once a promising young novelist with a respectably published first book. Today, he’s teaching in a third-rate MFA program and struggling to maintain what’s left of his self-respect; he hasn’t written—let alone published—anything decent in years. When Evan Parker, his most arrogant student, announces he doesn’t need Jake’s help because the plot of his book in progress is a sure thing, Jake is prepared to dismiss the boast as typical amateur narcissism. But then . . . he hears the plot.
+	</p>
+</article>
+
+
+<article property="mainEntity" typeof="Book">
+	<p class="date-read">September 2022</p>
+	<img property="image" src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1554735313l/40203647._SY475_.jpg" alt=""/>
+	<h2><a href="https://www.goodreads.com/book/show/40203647-maybe-you-should-talk-to-someone" property="name">Maybe You Should Talk to Someone: A Therapist, Her Therapist, and Our Lives Revealed </a></h2>
+	<p class="author">by <a property="author" href="https://www.goodreads.com/author/show/201386.Lori_Gottlieb">Lori Gottlieb</a></p>
+	<p class="description">
+		With startling wisdom and humor, Gottlieb invites us into her world as both clinician and patient, examining the truths and fictions we tell ourselves and others as we teeter on the tightrope between love and desire, meaning and mortality, guilt and redemption, terror and courage, hope and change.
+	</p>
+</article>
+
+<article property="mainEntity" typeof="Book">
+	<p class="date-read">July 2022</p>
+	<img property="image" src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1639378927l/58284103.jpg" alt=""/>
+	<h2><a href="https://www.goodreads.com/book/show/58284103-run-towards-the-danger" property="name">Run Towards the Danger: Confrontations with a Body of Memory</a></h2>
+	<p class="author">by <a property="author" href="https://www.goodreads.com/author/show/3456015.Sarah_Polley">Sarah Polley</a></p>
+	<p class="description">
+		These are the most dangerous stories of my life. The ones I have avoided, the ones I haven't told, the ones that have kept me awake on countless nights. As these stories found echoes in my adult life, and then went another, better way than they did in childhood, they became lighter and easier to carry.
+	</p>
+</article>
+
+
+<article property="mainEntity" typeof="Book">
+	<p class="date-read">June 2022</p>
+	<img property="image" src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1481223015l/31920820.jpg" alt=""/>
+	<h2><a href="https://www.goodreads.com/book/show/31920820-priestdaddy" property="name">Priestdaddy</a></h2>
+	<p class="author">by <a property="author" href="https://www.goodreads.com/author/show/5220577.Patricia_Lockwood">Patricia Lockwood</a></p>
+	<p class="description">
+		Father Greg Lockwood is unlike any Catholic priest you have ever met - a man who lounges in boxer shorts, who loves action movies, and whose constant jamming on the guitar reverberates "like a whole band dying in a plane crash in 1972". His daughter is an irreverent poet who long ago left the church's country. When an unexpected crisis leads her and her husband to move back into her parents' rectory, their two worlds collide.
+	</p>
+</article>
+
+<article property="mainEntity" typeof="Book">
+	<p class="date-read">April 2022</p>
+	<img property="image" src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1548168874l/43681256._SY475_.jpg" alt=""/>
+	<h2><a href="https://www.goodreads.com/book/show/43681256-crow" property="name">Crow</a></h2>
+	<p class="author">by <a property="author" href="https://www.goodreads.com/author/show/18813806.Amy_Spurway">Amy Spurway</a></p>
+	<p class="description">
+		When Stacey Fortune is diagnosed with three highly unpredictable — and inoperable — brain tumours, she abandons the crumbling glamour of her life in Toronto for her mother Effie's scruffy trailer in rural Cape Breton. Back home, she's known as Crow, and everybody suspects that her family is cursed.
+	</p>
+</article>
+
+<article property="mainEntity" typeof="Book">
+	<p class="date-read">January 2022</p>
+	<img property="image" src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1582287822l/46000520.jpg" alt=""/>
+	<h2><a href="https://www.goodreads.com/book/show/46000520-the-thursday-murder-club" property="name">The Thursday Murder Club</a></h2>
+	<p class="author">by <a property="author" href="https://www.goodreads.com/author/show/6173710.Richard_Osman">Richard Osman</a></p>
+	<p class="description">
+		In a peaceful retirement village, four unlikely friends meet weekly in the Jigsaw Room to discuss unsolved crimes; together they call themselves The Thursday Murder Club.
+	</p>
+</article>
+
+<article property="mainEntity" typeof="Book">
+	<p class="date-read">September 2021</p>
+	<img property="image" src="https://web.archive.org/web/20211219180706im_/https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1625616053l/58506093._SY475_.jpg" alt="">
+	<h2><a href="https://web.archive.org/web/20211219180706/https://www.goodreads.com/book/show/58506093-the-trials-of-ildarwood" property="name">The Trials of Ildarwood</a></h2>
+	<p class="author">by <a property="author" href="https://web.archive.org/web/20211219180706/https://www.goodreads.com/author/show/21643723.S_C_Selvyn">S.C. Selvyn</a></p>
+	<p class="description">
+		For nearly 10,000 years, the Trials have been a sacred tradition. But when all of the twelve-year-old children in Ranewood are banished into the nearest spectral forest, they quickly realize that the Ildarwood is not nearly as safe as they were told.
+	</p>
+</article>
+
+
+
+<article property="mainEntity" typeof="Book">
+	<p class="date-read">August 2021</p>
+	<img property="image" src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1603634856l/54304089.jpg" alt=""/>
+	<h2><a href="https://www.goodreads.com/book/show/54304089-the-girls-are-all-so-nice-here" property="name">The Girls Are All So Nice Here</a></h2>
+	<p class="author">by <a property="author" href="https://www.goodreads.com/author/show/9816754.Laurie_Elizabeth_Flynn">Laurie Elizabeth Flynn</a></p>
+	<p class="description">
+		A lot has changed in years since Ambrosia Wellington graduated from college, and she’s worked hard to create a new life for herself. But then an invitation to her ten-year reunion arrives in the mail, along with an anonymous note that reads, “We need to talk about what we did that night.”
+	</p>
+</article>
+
+
+<article property="mainEntity" typeof="Book">
+	<p class="date-read">June 2021</p>
+	<img property="image" src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1594622941l/45010921.jpg" alt=""/>
+	<h2><a href="https://www.goodreads.com/book/show/45010921-dirty-birds" property="name">Dirty Birds</a></h2>
+	<p class="author">by <a property="author" href="https://www.goodreads.com/author/show/6009414.Morgan_Murray">Morgan Murray</a></p>
+	<p class="description">
+		In late 2008, as the world's economy crumbles and Barack Obama ascends to the White House, the remarkably unremarkable Milton Ontario - not to be confused with Milton, Ontario - leaves his parents' basement in Middle-of-Nowhere, Saskatchewan, and sets forth to find fame, fortune, and love in the Euro-lite electric sexuality of Montreal; to bask in the endless twenty-something Millennial adolescence of the Plateau; to escape the infinite flatness of Saskatchewan and find his messiah - Leonard Cohen.
+	</p>
+</article>
 
 <article property="mainEntity" typeof="Book">
 	<p class="date-read">May 2021</p>
@@ -330,8 +416,13 @@
 			Esther Greenwood is brilliant, beautiful, enormously talented, and successful, but slowly going under—maybe for the last time.
 		</p>
 	</article>
+	<div style="clear: both; display: block;"></div>
 
 </section>
+
+<footer>
+	
+</footer>
 
 </body>
 </html>
